--- a/GameDevIICMOD.CSharp.Editor.csproj
+++ b/GameDevIICMOD.CSharp.Editor.csproj
@@ -91,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Editor\BatchRename.cs" />
+    <Compile Include="Assets\Editor\FBX_Import.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
